--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body{font-family: 'Custom'; background-color: black;}
 h1{background-color:hsla(0, 0%, 0%, 0.5); color:white;}
 p{background-color:hsla(0, 0%, 0%, 0.5); color:white;}
 ol{background-color:hsla(0, 0%, 0%, 0.5); color:white;}
+img{background-color:hsla(0, 0%, 0%, 0.5);}
 @font-face {font-family: 'Custom'; src: url('Kabel\ Bold.ttf');}
 input{font-family: 'Custom'; background-color:hsla(0, 0%, 0%, 0.5); color:white;}
 input::placeholder{color:white;}
