--- a/map.css
+++ b/map.css
@@ -8,3 +8,5 @@ a{text-decoration: none; color:white;}
 table{background-image: url('Map.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;}
 #USA{background: url("star.png") repeat-y 99.8%, linear-gradient(270deg, blue 20px, white  20px 40px, red 40px 60px, hsla(0, 0%, 0%, 0) 60px 80px);}
 html{cursor: crosshair;}
+#invert{filter:invert(100%);}
+#invert td{filter:invert(100%);}
