--- a/map.css
+++ b/map.css
@@ -5,8 +5,7 @@ p{background-color:hsla(0, 0%, 0%, 0.5); color:white;}
 @font-face {font-family: 'Custom'; src: url('Kabel\ Bold.ttf');}
 a{text-decoration: none; color:white;}
 #random{background-repeat: no-repeat; background-attachment: fixed; background-size: cover;}
-table{background-image: url('Map.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;}
 #USA{background: url("star.png") repeat-y 99.8%, linear-gradient(270deg, blue 20px, white  20px 40px, red 40px 60px, hsla(0, 0%, 0%, 0) 60px 80px);}
 html{cursor: crosshair;}
-#invert{filter:invert(100%);}
-#invert td{filter:invert(100%);}
+#map1{background-image: url('map1.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: auto;}
+#map2{background-image: url('map2.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: auto;}
