--- a/main.css
+++ b/main.css
@@ -11,6 +11,6 @@ button{font-family: 'Custom'; background-color:hsla(0, 0%, 0%, 0.5); color:white
 a{text-decoration: none; color:white;}
 #random{background-repeat: no-repeat; background-attachment: fixed; background-size: cover;}
 #USA{background: url("star.png") repeat-y 99.8%, linear-gradient(270deg, blue 20px, white  20px 40px, red 40px 60px, hsla(0, 0%, 0%, 0) 60px 80px);}
-html{cursor: crosshair;}
+html{cursor: crosshair; scroll-behavior: smooth;}
 @keyframes slide-in {100%{transform: translateX(0%);}}
 @-webkit-keyframes slide-in {100%{-webkit-transform: translateX(0%);}}
