--- a/map.css
+++ b/map.css
@@ -1,4 +1,4 @@
-ul{list-style-type: none; background-color:hsla(0, 0%, 0%, 0.5); color:white; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards;}
+ul{list-style-type: none; background-color:hsla(0, 0%, 0%, 0.5); color:white; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards; list-style-position: inside;}
 body{font-family: 'Custom'; background-color: black;}
 h1{background-color:hsla(0, 0%, 0%, 0.5); color:white; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards;}
 p{background-color:hsla(0, 0%, 0%, 0.5); color:white; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards;}
