--- a/map.css
+++ b/map.css
@@ -6,7 +6,7 @@ p{background-color:hsla(0, 0%, 0%, 0.5); color:white; transform: translateX(-100
 a{text-decoration: none; color:white;}
 #random{background-repeat: no-repeat; background-attachment: fixed; background-size: cover;}
 #USA{background: url("star.png") repeat-y 99.8%, linear-gradient(270deg, blue 20px, white  20px 40px, red 40px 60px, hsla(0, 0%, 0%, 0) 60px 80px);}
-html{cursor: crosshair; scroll-behavior: smooth;}
+html{cursor: crosshair; scroll-behavior: smooth; word-wrap: break-word;}
 #map1{background-image: url('map1.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: auto; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards;}
 #map2{background-image: url('map2.png'); background-repeat: no-repeat; background-attachment: fixed; background-size: auto; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards;}
 #map3{background-image: url('map3.png'); background-repeat: repeat; background-attachment: fixed; background-size: auto; transform: translateX(-100%); -webkit-transform: translateX(-100%); animation: slide-in 0.5s forwards; -webkit-animation: slide-in 0.5s forwards;}
